--- a/haproxy.cfg
+++ b/haproxy.cfg
@@ -9,35 +9,33 @@ global
     daemon
 defaults
     mode                    tcp                        # TCP模式
-    log                     global
-    option                  tcplog
-    option                  dontlognull
-    option                  httpclose
-    option                  http-server-close
-    option                  redispatch
+    log                     global                     # 采用全局定义的日志
+    option                  tcplog                     # 允许记录tcp连接的状态和时间
+    option                  dontlognull                # 保证HAProxy不记录上级负载均衡发送过来的用于检测状态没有数据的心跳包。
+    option                  redispatch                 # serverId对应的服务器挂掉后,强制定向到其他健康的服务器
+    option		            abortonclose               # 丢弃由于客户端等待时间过长而关闭连接但仍在haproxy等待队列中的请求
     retries                 3
-    timeout connect         2s                         # 上游TCP服务器连接等待时间
+    timeout connect         10s                        # 上游TCP服务器连接等待时间
     timeout client          1m                         # 客户端超时
     timeout server          1m                         # 服务器端超时
-    maxconn                 3000                       # 每个进程可用的最大连接数
-#    balance                leastconn                  # 使用连接数最少的服务器
-    balance                 roundrobin                 # 负载均衡算法,轮询
-listen                      admin_status               # 配置监控WEB控制台
+    maxconn                 10240                      # 每个进程可用的最大连接数
+    balance                 leastconn                  # 使用连接数最少的服务器
+listen      admin_status               # 配置监控WEB控制台
     mode                    http                       # http模式
     bind                    0.0.0.0:16888              # 侦听IPort
-    #bind                   0.0.0.0:16444              # 侦听IPort,可以设置多个WEB端口
     stats                   enable
-    stats                   refresh 300s               # 设置页面刷新时间
+    stats                   refresh 30s                # 设置页面刷新时间
     stats                   uri  /                     # haproxy监控页面的访问地址
     stats                   auth admin:zzt2008zzt      # 设置监控页面的用户和密码，可以设置多个账户密码
     stats                   hide-version               # 隐藏统计页面的HAproxy版本信息
     stats                   admin if TRUE              # 手工启用/禁用后端服务器
-frontend                    ssr_proxy
+frontend    ssr_proxy
     mode                    tcp                        # TCP模式
+    tcp-request inspect-delay 2s
     bind                    *:12018
     default_backend         shadowsocksR
-backend                     shadowsocksR
-    balance                 source                     # 负载均衡算法,轮询
+backend     shadowsocksR
+    balance                 static-rr                  # 负载均衡算法
     # bandwagon-gia-cn2 1TB KVM
     server bandwagon-gia-cn2 89.208.250.224:12018  check port 12018  inter 2000  maxconn 20480 fall 3 weight 100
     # dedione 5T KVM
