--- a/haproxy.cfg
+++ b/haproxy.cfg
@@ -13,7 +13,7 @@ defaults
     option                  tcplog                     # 允许记录tcp连接的状态和时间
     option                  dontlognull                # 保证HAProxy不记录上级负载均衡发送过来的用于检测状态没有数据的心跳包。
     option                  redispatch                 # serverId对应的服务器挂掉后,强制定向到其他健康的服务器
-    option		            abortonclose               # 丢弃由于客户端等待时间过长而关闭连接但仍在haproxy等待队列中的请求
+    option                  abortonclose               # 丢弃由于客户端等待时间过长而关闭连接但仍在haproxy等待队列中的请求
     retries                 3
     timeout connect         10s                        # 上游TCP服务器连接等待时间
     timeout client          1m                         # 客户端超时
@@ -32,9 +32,10 @@ listen      admin_status               # 配置监控WEB控制台
 frontend    ssr_proxy
     mode                    tcp                        # TCP模式
     tcp-request inspect-delay 2s
-    bind                    *:12018
+    bind                    *:22018
     default_backend         shadowsocksR
 backend     shadowsocksR
+    option                  http-server-close
     balance                 static-rr                  # 负载均衡算法
     # bandwagon-gia-cn2 1TB KVM
     server bandwagon-gia-cn2 89.208.250.224:12018  check port 12018  inter 2000  maxconn 20480 fall 3 weight 100
@@ -42,8 +43,12 @@ backend     shadowsocksR
     server dedione           104.233.242.222:12018 check port 12018  inter 2000  maxconn 20480 fall 3 weight 100
     # arebz 20M 不限
     server arebz             66.154.120.50:12018   check port 12018  inter 2000  maxconn 20480 fall 3 weight 100
+    # alpharacks-kvm 2.9TB KVM
+    server alpharacks-kvm    104.223.53.150:12018  check port 12018  inter 2000  maxconn 20480 fall 3 weight 90
     # bandwagon-cn2 1TB KVM
     server bandwagon-cn2     104.194.90.5:12018    check port 12018  inter 2000  maxconn 20480 fall 3 weight 80
+    # alpharacks-hdd 2.9TB OVZ
+    server alpharacks-hdd    104.223.53.113:12018  check port 12018  inter 2000  maxconn 20480 fall 3 weight 80
     # bandwagon-qn1 1TB KVM
     server bandwagon-qn1     45.78.20.117:12018    check port 12018  inter 2000  maxconn 20480 fall 3 weight 50
     # bandwagon-qn2 1TB KVM
@@ -60,13 +65,45 @@ backend     shadowsocksR
     server virmach           107.175.60.101:12018  check port 12018  inter 2000  maxconn 20480 fall 3 weight 30
     # hiformance 2TB OVZ
     server hiformance        107.175.21.191:12018  check port 12018  inter 2000  maxconn 20480 fall 3 weight 30
-    # alpharacks-kvm 2.9TB KVM
-    server alpharacks-kvm    104.223.53.150:12018  check port 12018  inter 2000  maxconn 20480 fall 3 weight 20
+    # alpharacks-ssd 1.5TB OVZ
+    server alpharacks-ssd    104.223.53.140:12018  check port 12018  inter 2000  maxconn 20480 fall 3 weight 30
     # hostmybytes-ovz 3TB OVZ
-    server hostmybytes       104.223.73.25:12018   check port 12018  inter 2000  maxconn 20480 fall 3 weight 10
+    server hostmybytes       104.223.73.25:12018   check port 12018  inter 2000  maxconn 20480 fall 3 weight 20
     # hostmybytes-kvm KVM
     server hostmybytes-kvm   167.88.170.116:12018  check port 12018  inter 2000  maxconn 20480 fall 3 weight 10
+frontend    phone
+    mode                    tcp                        # TCP模式
+    tcp-request inspect-delay 2s
+    bind                    *:22019
+    default_backend         phoneSSR
+backend     phoneSSR
+    option                  http-server-close
+    balance                 static-rr                  # 负载均衡算法
+    # bandwagon-gia-cn2 1TB KVM
+    server bandwagon-gia-cn2 89.208.250.224:12019  check port 12019  inter 2000  maxconn 20480 fall 3 weight 100
+    # dedione 5T KVM
+    server dedione           104.233.242.222:12019 check port 12019  inter 2000  maxconn 20480 fall 3 weight 100
+    # arebz 20M 不限
+    server arebz             66.154.120.50:12019   check port 12019  inter 2000  maxconn 20480 fall 3 weight 100
+    # alpharacks-kvm 2.9TB KVM
+    server alpharacks-kvm    104.223.53.150:12019  check port 12019  inter 2000  maxconn 20480 fall 3 weight 90
+    # bandwagon-cn2 1TB KVM
+    server bandwagon-cn2     104.194.90.5:12019    check port 12019  inter 2000  maxconn 20480 fall 3 weight 80
     # alpharacks-hdd 2.9TB OVZ
-    server alpharacks-hdd    104.223.53.113:12018  check port 12018  inter 2000  maxconn 20480 fall 3 weight 10
-    # alpharacks-ssd 1.5TB OVZ
-    server alpharacks-ssd    104.223.53.140:12018  check port 12018  inter 2000  maxconn 20480 fall 3 weight 10
+    server alpharacks-hdd    104.223.53.113:12019  check port 12019  inter 2000  maxconn 20480 fall 3 weight 80
+    # bandwagon-qn1 1TB KVM
+    server bandwagon-qn1     45.78.20.117:12019    check port 12019  inter 2000  maxconn 20480 fall 3 weight 50
+    # bandwagon-qn2 1TB KVM
+    server bandwagon-qn2     66.98.125.108:12019   check port 12019  inter 2000  maxconn 20480 fall 3 weight 50
+    # hostodo 1TB KVM
+    server hostodo           216.126.238.83:12019  check port 12019  inter 2000  maxconn 20480 fall 3 weight 50
+    # greencloudvps  1.5TB KVM
+    server greencloudvps     192.161.167.157:12019 check port 12019  inter 2000  maxconn 20480 fall 3 weight 50
+    # hostdare 300G OVZ
+    server hostdare          185.186.146.107:12019 check port 12019  inter 2000  maxconn 20480 fall 3 weight 50
+    # virmach 250 GB OVZ
+    server virmach           107.175.60.101:12019  check port 12019  inter 2000  maxconn 20480 fall 3 weight 30
+    # hiformance 2TB OVZ
+    server hiformance        107.175.21.191:12019  check port 12019  inter 2000  maxconn 20480 fall 3 weight 30
+    # hostmybytes-kvm KVM
+    server hostmybytes-kvm   167.88.170.116:12019  check port 12019  inter 2000  maxconn 20480 fall 3 weight 10
