--- a/haproxy.cfg
+++ b/haproxy.cfg
@@ -36,7 +36,7 @@ frontend    ssr_proxy
     default_backend         shadowsocksR
 backend     shadowsocksR
     option                  http-server-close
-    balance                 static-rr                  # 负载均衡算法
+    balance                 source                  # ip hash
     # dedione 5T KVM
     server dedione           104.233.242.222:12018 check port 12018  inter 2000  maxconn 20480 fall 3 weight 100
     # arebz 20M 不限
