--- a/haproxy.cfg
+++ b/haproxy.cfg
@@ -1,11 +1,11 @@
 global
-    ulimit-n 51200
+    ulimit-n 51500
     log         127.0.0.1 local2
     chroot      /var/lib/haproxy
     pidfile     /var/run/haproxy.pid
     user        haproxy
     group       haproxy
-    maxconn     10240
+    maxconn     50240
     daemon
 defaults
     mode                    tcp                        # TCP模式
@@ -15,87 +15,219 @@ defaults
     option                  redispatch                 # serverId对应的服务器挂掉后,强制定向到其他健康的服务器
     option                  abortonclose               # 丢弃由于客户端等待时间过长而关闭连接但仍在haproxy等待队列中的请求
     retries                 3
-    timeout connect         10s                        # 上游TCP服务器连接等待时间
+    timeout connect         50s                        # 上游TCP服务器连接等待时间
     timeout client          1m                         # 客户端超时
     timeout server          1m                         # 服务器端超时
-    maxconn                 10240                      # 每个进程可用的最大连接数
+    maxconn                 50240                      # 每个进程可用的最大连接数
     balance                 leastconn                  # 使用连接数最少的服务器
 listen      admin_status               # 配置监控WEB控制台
     mode                    http                       # http模式
     bind                    0.0.0.0:16888              # 侦听IPort
     stats                   enable
-    stats                   refresh 30s                # 设置页面刷新时间
+    stats                   refresh 50s                # 设置页面刷新时间
     stats                   uri  /                     # haproxy监控页面的访问地址
-    stats                   auth admin:zzt2008zzt      # 设置监控页面的用户和密码，可以设置多个账户密码
+    stats                   auth admin:zzt5008zzt      # 设置监控页面的用户和密码，可以设置多个账户密码
     stats                   hide-version               # 隐藏统计页面的HAproxy版本信息
     stats                   admin if TRUE              # 手工启用/禁用后端服务器
-frontend    ssr_proxy
+frontend    ssr2018
     mode                    tcp                        # TCP模式
     tcp-request inspect-delay 2s
     bind                    *:22018
-    default_backend         shadowsocksR
-backend     shadowsocksR
+    default_backend         ssr2018
+backend     ssr2018
     option                  http-server-close
     balance                 source                  # ip hash
-    # dedione 5T KVM
-    server dedione           104.233.242.222:12018 check port 12018  inter 2000  maxconn 20480 fall 3 weight 100
-    # arebz 20M 不限
-    server arebz             66.154.120.50:12018   check port 12018  inter 2000  maxconn 20480 fall 3 weight 100
-    # alpharacks-kvm 2.9TB KVM
-    server alpharacks-kvm    104.223.53.150:12018  check port 12018  inter 2000  maxconn 20480 fall 3 weight 90
-    # bandwagon-cn2 1TB KVM
-    server bandwagon-cn2     104.194.90.5:12018    check port 12018  inter 2000  maxconn 20480 fall 3 weight 80
-    # alpharacks-hdd 2.9TB OVZ
-    server alpharacks-hdd    104.223.53.113:12018  check port 12018  inter 2000  maxconn 20480 fall 3 weight 80
-    # bandwagon-qn1 1TB KVM
-    server bandwagon-qn1     45.78.20.117:12018    check port 12018  inter 2000  maxconn 20480 fall 3 weight 50
-    # bandwagon-qn2 1TB KVM
-    server bandwagon-qn2     66.98.125.108:12018   check port 12018  inter 2000  maxconn 20480 fall 3 weight 50
-    # hostodo 1TB KVM
-    server hostodo           216.126.238.83:12018  check port 12018  inter 2000  maxconn 20480 fall 3 weight 50
-    # greencloudvps  1.5TB KVM
-    server greencloudvps     192.161.167.157:12018 check port 12018  inter 2000  maxconn 20480 fall 3 weight 50
-    # hostdare 300G OVZ
-    server hostdare          185.186.146.107:12018 check port 12018  inter 2000  maxconn 20480 fall 3 weight 50
-    # ramnode 500G OVZ
-    server ramnode           168.235.96.233:12018  check port 12018  inter 2000  maxconn 20480 fall 3 weight 50
-    # virmach 250 GB OVZ
-    server virmach           107.175.60.101:12018  check port 12018  inter 2000  maxconn 20480 fall 3 weight 30
-    # alpharacks-ssd 1.5TB OVZ
-    server alpharacks-ssd    104.223.53.140:12018  check port 12018  inter 2000  maxconn 20480 fall 3 weight 30
+    # alpharacks-ovz-ssd 1.5TB KVM
+    server alpharacks-kvm-ssd    104.223.53.140:2018  check port 2018  inter 5000  maxconn 10450 fall 3 weight 50
+    # alpharacks-ovz-hdd 2.9TB KVM
+    server alpharacks-kvm-hdd    104.223.53.113:2018  check port 2018  inter 5000  maxconn 10450 fall 3 weight 50
+    # anynode 500G
+    server anynode               206.253.164.26:2018  check port 2018  inter 5000  maxconn 10450 fall 3 weight 50
+    # arebz arebz-gia-cn2 15M 不限
+    server arebz-gia-cn2         107.148.243.60:2018  check port 2018  inter 5000  maxconn 10450 fall 3 weight 50
+    # arebz LA 20M 不限
+    server arebz-la              154.85.14.188:2018   check port 2018  inter 5000  maxconn 10450 fall 3 weight 50
+    # arebz cn2 20M 不限
+    server arebz-cn2             66.154.120.50:2018   check port 2018  inter 5000  maxconn 10450 fall 3 weight 50
+    # bandwagon-cn2-dc3 1T
+    server bandwagon-cn2-dc3     107.182.27.203:2018  check port 2018  inter 5000  maxconn 10450 fall 3 weight 50
+    # bandwagon-cn2-dc3-2 1T
+    server bandwagon-cn2-dc3-2   144.34.232.37:2018   check port 2018  inter 5000  maxconn 10450 fall 3 weight 50
+    # bandwagon-gia-cn2 300G
+    server bandwagon-gia-cn2     67.230.189.12:2018   check port 2018  inter 5000  maxconn 10450 fall 3 weight 50
+    # bandwagon-qn1  550G
+    server bandwagon-qn1     	 45.78.20.117:2018    check port 2018  inter 5000  maxconn 10450 fall 3 weight 50
+    # bandwagon-qn2 1T
+    server bandwagon-qn2     	 66.98.125.108:2018   check port 2018  inter 5000  maxconn 10450 fall 3 weight 50
+    # dedione-gia-cn2 5T
+    server dedione               45.199.187.114:2018  check port 2018  inter 5000  maxconn 10450 fall 3 weight 50
+    # greencloudvps 2TB 10g port
+    server greencloudvps-10g     155.94.160.113:2018  check port 2018  inter 5000  maxconn 10450 fall 3 weight 50
+    # greencloudvps  1.5TB
+    server greencloudvps         192.161.167.157:2018 check port 2018  inter 5000  maxconn 10450 fall 3 weight 50
     # hostmybytes-ovz 3TB OVZ
-    server hostmybytes       104.223.73.25:12018   check port 12018  inter 2000  maxconn 20480 fall 3 weight 20
-    # hostmybytes-kvm KVM
-    server hostmybytes-kvm   167.88.170.116:12018  check port 12018  inter 2000  maxconn 20480 fall 3 weight 10
-frontend    phone
+    server hostmybytes           104.223.73.25:2018   check port 2018  inter 5000  maxconn 10450 fall 3 weight 50
+    # hostdare 300G OVZ gia cn2
+    server hostdare-ovz          185.186.146.107:2018 check port 2018  inter 5000  maxconn 10450 fall 3 weight 50
+    # hostdare 1T gia cn2
+    server hostdare-ckmv6        202.91.34.98:2018    check port 2018  inter 5000  maxconn 10450 fall 3 weight 50
+    # hostdare 1T gia cn2
+    server hostdare-kvm          185.194.148.130:2018 check port 2018  inter 5000  maxconn 10450 fall 3 weight 50
+    # hostones 29.3T
+    server hostones              185.133.193.114:2018 check port 2018  inter 5000  maxconn 10450 fall 3 weight 50
+    # hostodo 1TB
+    server hostodo               216.126.238.83:2018  check port 2018  inter 5000  maxconn 10450 fall 3 weight 50
+    # justhost 100M
+    server justhost              216.126.238.83:2018  check port 2018  inter 5000  maxconn 10450 fall 3 weight 50
+    # pnzhost 1TB
+    server pnzhost               104.216.111.102:2018 check port 2018  inter 5000  maxconn 10450 fall 3 weight 50
+    # profitserver 100M
+    server profitserver          80.85.156.194:2018   check port 2018  inter 5000  maxconn 10450 fall 3 weight 50
+    # raksmart 15M 精品网
+    server raksmart              66.98.125.508:2018   check port 2018  inter 5000  maxconn 10450 fall 3 weight 50
+    # ramnode 500G OVZ
+    server ramnode               168.235.96.233:2018  check port 2018  inter 5000  maxconn 10450 fall 3 weight 50
+    # tripodcloud 1.5T
+    server tripodcloud           107.148.241.243:2018 check port 2018  inter 5000  maxconn 10450 fall 3 weight 50
+    # virmach 500G
+    server virmach            	 23.95.67.11:2018     check port 2018  inter 5000  maxconn 10450 fall 3 weight 50
+    # virmach 250G OVZ
+    server virmach-ovz           107.175.60.101:2018  check port 2018  inter 5000  maxconn 10450 fall 3 weight 50
+    # yunserver 500G
+    server yunserver             14.192.48.111:2018   check port 2018  inter 5000  maxconn 10450 fall 3 weight 50
+
+
+frontend    ssr2019
     mode                    tcp                        # TCP模式
     tcp-request inspect-delay 2s
     bind                    *:22019
-    default_backend         phoneSSR
-backend     phoneSSR
+    default_backend         ssr2019
+backend     ssr2019
     option                  http-server-close
-    balance                 static-rr                  # 负载均衡算法
-    # dedione 5T KVM
-    server dedione           104.233.242.222:12019 check port 12019  inter 2000  maxconn 20480 fall 3 weight 100
-    # arebz 20M 不限
-    server arebz             66.154.120.50:12019   check port 12019  inter 2000  maxconn 20480 fall 3 weight 100
-    # alpharacks-kvm 2.9TB KVM
-    server alpharacks-kvm    104.223.53.150:12019  check port 12019  inter 2000  maxconn 20480 fall 3 weight 90
-    # bandwagon-cn2 1TB KVM
-    server bandwagon-cn2     104.194.90.5:12019    check port 12019  inter 2000  maxconn 20480 fall 3 weight 80
-    # alpharacks-hdd 2.9TB OVZ
-    server alpharacks-hdd    104.223.53.113:12019  check port 12019  inter 2000  maxconn 20480 fall 3 weight 80
-    # bandwagon-qn1 1TB KVM
-    server bandwagon-qn1     45.78.20.117:12019    check port 12019  inter 2000  maxconn 20480 fall 3 weight 50
-    # bandwagon-qn2 1TB KVM
-    server bandwagon-qn2     66.98.125.108:12019   check port 12019  inter 2000  maxconn 20480 fall 3 weight 50
-    # hostodo 1TB KVM
-    server hostodo           216.126.238.83:12019  check port 12019  inter 2000  maxconn 20480 fall 3 weight 50
-    # greencloudvps  1.5TB KVM
-    server greencloudvps     192.161.167.157:12019 check port 12019  inter 2000  maxconn 20480 fall 3 weight 50
-    # hostdare 300G OVZ
-    server hostdare          185.186.146.107:12019 check port 12019  inter 2000  maxconn 20480 fall 3 weight 50
-    # virmach 250 GB OVZ
-    server virmach           107.175.60.101:12019  check port 12019  inter 2000  maxconn 20480 fall 3 weight 30
-    # hostmybytes-kvm KVM
-    server hostmybytes-kvm   167.88.170.116:12019  check port 12019  inter 2000  maxconn 20480 fall 3 weight 10
+    balance                 source                  # ip hash
+    # alpharacks-ovz-ssd 1.5TB KVM
+    server alpharacks-kvm-ssd    104.223.53.140:2019  check port 2019  inter 5000  maxconn 10450 fall 3 weight 50
+    # alpharacks-ovz-hdd 2.9TB KVM
+    server alpharacks-kvm-hdd    104.223.53.113:2019  check port 2019  inter 5000  maxconn 10450 fall 3 weight 50
+    # anynode 500G
+    server anynode               206.253.164.26:2019  check port 2019  inter 5000  maxconn 10450 fall 3 weight 50
+    # arebz arebz-gia-cn2 15M 不限
+    server arebz-gia-cn2         107.148.243.60:2019  check port 2019  inter 5000  maxconn 10450 fall 3 weight 50
+    # arebz LA 20M 不限
+    server arebz-la              154.85.14.188:2019   check port 2019  inter 5000  maxconn 10450 fall 3 weight 50
+    # arebz cn2 20M 不限
+    server arebz-cn2             66.154.120.50:2019   check port 2019  inter 5000  maxconn 10450 fall 3 weight 50
+    # bandwagon-cn2-dc3 1T
+    server bandwagon-cn2-dc3     107.182.27.203:2019  check port 2019  inter 5000  maxconn 10450 fall 3 weight 50
+    # bandwagon-cn2-dc3-2 1T
+    server bandwagon-cn2-dc3-2   144.34.232.37:2019   check port 2019  inter 5000  maxconn 10450 fall 3 weight 50
+    # bandwagon-gia-cn2 300G
+    server bandwagon-gia-cn2     67.230.189.12:2019   check port 2019  inter 5000  maxconn 10450 fall 3 weight 50
+    # bandwagon-qn1  550G
+    server bandwagon-qn1     	 45.78.20.117:2019    check port 2019  inter 5000  maxconn 10450 fall 3 weight 50
+    # bandwagon-qn2 1T
+    server bandwagon-qn2     	 66.98.125.108:2019   check port 2019  inter 5000  maxconn 10450 fall 3 weight 50
+    # dedione-gia-cn2 5T
+    server dedione               45.199.187.114:2019  check port 2019  inter 5000  maxconn 10450 fall 3 weight 50
+    # greencloudvps 2TB 10g port
+    server greencloudvps-10g     155.94.160.113:2019  check port 2019  inter 5000  maxconn 10450 fall 3 weight 50
+    # greencloudvps  1.5TB
+    server greencloudvps         192.161.167.157:2019 check port 2019  inter 5000  maxconn 10450 fall 3 weight 50
+    # hostmybytes-ovz 3TB OVZ
+    server hostmybytes           104.223.73.25:2019   check port 2019  inter 5000  maxconn 10450 fall 3 weight 50
+    # hostdare 300G OVZ gia cn2
+    server hostdare-ovz          185.186.146.107:2019 check port 2019  inter 5000  maxconn 10450 fall 3 weight 50
+    # hostdare 1T gia cn2
+    server hostdare-ckmv6        202.91.34.98:2019    check port 2019  inter 5000  maxconn 10450 fall 3 weight 50
+    # hostdare 1T gia cn2
+    server hostdare-kvm          185.194.148.130:2019 check port 2019  inter 5000  maxconn 10450 fall 3 weight 50
+    # hostones 29.3T
+    server hostones              185.133.193.114:2019 check port 2019  inter 5000  maxconn 10450 fall 3 weight 50
+    # hostodo 1TB
+    server hostodo               216.126.238.83:2019  check port 2019  inter 5000  maxconn 10450 fall 3 weight 50
+    # justhost 100M
+    server justhost              216.126.238.83:2019  check port 2019  inter 5000  maxconn 10450 fall 3 weight 50
+    # pnzhost 1TB
+    server pnzhost               104.216.111.102:2019 check port 2019  inter 5000  maxconn 10450 fall 3 weight 50
+    # profitserver 100M
+    server profitserver          80.85.156.194:2019   check port 2019  inter 5000  maxconn 10450 fall 3 weight 50
+    # raksmart 15M 精品网
+    server raksmart              66.98.125.508:2019   check port 2019  inter 5000  maxconn 10450 fall 3 weight 50
+    # ramnode 500G OVZ
+    server ramnode               168.235.96.233:2019  check port 2019  inter 5000  maxconn 10450 fall 3 weight 50
+    # tripodcloud 1.5T
+    server tripodcloud           107.148.241.243:2019 check port 2019  inter 5000  maxconn 10450 fall 3 weight 50
+    # virmach 500G
+    server virmach            	 23.95.67.11:2019     check port 2019  inter 5000  maxconn 10450 fall 3 weight 50
+    # virmach 250G OVZ
+    server virmach-ovz           107.175.60.101:2019  check port 2019  inter 5000  maxconn 10450 fall 3 weight 50
+    # yunserver 500G
+    server yunserver             14.192.48.111:2019   check port 2019  inter 5000  maxconn 10450 fall 3 weight 50
+
+
+frontend    ssr2020
+    mode                    tcp                        # TCP模式
+    tcp-request inspect-delay 2s
+    bind                    *:22020
+    default_backend         ssr2020
+backend     shadowsocksR
+    option                  http-server-close
+    balance                 source                  # ip hash
+    # alpharacks-ovz-ssd 1.5TB KVM
+    server alpharacks-kvm-ssd    104.223.53.140:2020  check port 2020  inter 5000  maxconn 10450 fall 3 weight 50
+    # alpharacks-ovz-hdd 2.9TB KVM
+    server alpharacks-kvm-hdd    104.223.53.113:2020  check port 2020  inter 5000  maxconn 10450 fall 3 weight 50
+    # anynode 500G
+    server anynode               206.253.164.26:2020  check port 2020  inter 5000  maxconn 10450 fall 3 weight 50
+    # arebz arebz-gia-cn2 15M 不限
+    server arebz-gia-cn2         107.148.243.60:2020  check port 2020  inter 5000  maxconn 10450 fall 3 weight 50
+    # arebz LA 20M 不限
+    server arebz-la              154.85.14.188:2020   check port 2020  inter 5000  maxconn 10450 fall 3 weight 50
+    # arebz cn2 20M 不限
+    server arebz-cn2             66.154.120.50:2020   check port 2020  inter 5000  maxconn 10450 fall 3 weight 50
+    # bandwagon-cn2-dc3 1T
+    server bandwagon-cn2-dc3     107.182.27.203:2020  check port 2020  inter 5000  maxconn 10450 fall 3 weight 50
+    # bandwagon-cn2-dc3-2 1T
+    server bandwagon-cn2-dc3-2   144.34.232.37:2020   check port 2020  inter 5000  maxconn 10450 fall 3 weight 50
+    # bandwagon-gia-cn2 300G
+    server bandwagon-gia-cn2     67.230.189.12:2020   check port 2020  inter 5000  maxconn 10450 fall 3 weight 50
+    # bandwagon-qn1  550G
+    server bandwagon-qn1     	 45.78.20.117:2020    check port 2020  inter 5000  maxconn 10450 fall 3 weight 50
+    # bandwagon-qn2 1T
+    server bandwagon-qn2     	 66.98.125.108:2020   check port 2020  inter 5000  maxconn 10450 fall 3 weight 50
+    # dedione-gia-cn2 5T
+    server dedione               45.199.187.114:2020  check port 2020  inter 5000  maxconn 10450 fall 3 weight 50
+    # greencloudvps 2TB 10g port
+    server greencloudvps-10g     155.94.160.113:2020  check port 2020  inter 5000  maxconn 10450 fall 3 weight 50
+    # greencloudvps  1.5TB
+    server greencloudvps         192.161.167.157:2020 check port 2020  inter 5000  maxconn 10450 fall 3 weight 50
+    # hostmybytes-ovz 3TB OVZ
+    server hostmybytes           104.223.73.25:2020   check port 2020  inter 5000  maxconn 10450 fall 3 weight 50
+    # hostdare 300G OVZ gia cn2
+    server hostdare-ovz          185.186.146.107:2020 check port 2020  inter 5000  maxconn 10450 fall 3 weight 50
+    # hostdare 1T gia cn2
+    server hostdare-ckmv6        202.91.34.98:2020    check port 2020  inter 5000  maxconn 10450 fall 3 weight 50
+    # hostdare 1T gia cn2
+    server hostdare-kvm          185.194.148.130:2020 check port 2020  inter 5000  maxconn 10450 fall 3 weight 50
+    # hostones 29.3T
+    server hostones              185.133.193.114:2020 check port 2020  inter 5000  maxconn 10450 fall 3 weight 50
+    # hostodo 1TB
+    server hostodo               216.126.238.83:2020  check port 2020  inter 5000  maxconn 10450 fall 3 weight 50
+    # justhost 100M
+    server justhost              216.126.238.83:2020  check port 2020  inter 5000  maxconn 10450 fall 3 weight 50
+    # pnzhost 1TB
+    server pnzhost               104.216.111.102:2020 check port 2020  inter 5000  maxconn 10450 fall 3 weight 50
+    # profitserver 100M
+    server profitserver          80.85.156.194:2020   check port 2020  inter 5000  maxconn 10450 fall 3 weight 50
+    # raksmart 15M 精品网
+    server raksmart              66.98.125.508:2020   check port 2020  inter 5000  maxconn 10450 fall 3 weight 50
+    # ramnode 500G OVZ
+    server ramnode               168.235.96.233:2020  check port 2020  inter 5000  maxconn 10450 fall 3 weight 50
+    # tripodcloud 1.5T
+    server tripodcloud           107.148.241.243:2020 check port 2020  inter 5000  maxconn 10450 fall 3 weight 50
+    # virmach 500G
+    server virmach            	 23.95.67.11:2020     check port 2020  inter 5000  maxconn 10450 fall 3 weight 50
+    # virmach 250G OVZ
+    server virmach-ovz           107.175.60.101:2020  check port 2020  inter 5000  maxconn 10450 fall 3 weight 50
+    # yunserver 500G
+    server yunserver             14.192.48.111:2020   check port 2020  inter 5000  maxconn 10450 fall 3 weight 50
