--- a/haproxy.cfg
+++ b/haproxy.cfg
@@ -36,7 +36,7 @@ frontend    ssr2018
     default_backend         ssr2018
 backend     ssr2018
     option                  http-server-close
-    balance                 source                  # ip hash
+    balance                 rdp-cookie                  # ip hash
     # alpharacks-ovz-ssd 1.5TB KVM
     server alpharacks-kvm-ssd    104.223.53.140:2018  check port 2018  inter 5000  maxconn 10450 fall 3 weight 50
     # alpharacks-ovz-hdd 2.9TB KVM
@@ -104,7 +104,7 @@ frontend    ssr2019
     default_backend         ssr2019
 backend     ssr2019
     option                  http-server-close
-    balance                 source                  # ip hash
+    balance                 rdp-cookie                  # ip hash
     # alpharacks-ovz-ssd 1.5TB KVM
     server alpharacks-kvm-ssd    104.223.53.140:2019  check port 2019  inter 5000  maxconn 10450 fall 3 weight 50
     # alpharacks-ovz-hdd 2.9TB KVM
@@ -172,7 +172,7 @@ frontend    ssr2020
     default_backend         ssr2020
 backend     shadowsocksR
     option                  http-server-close
-    balance                 source                  # ip hash
+    balance                 rdp-cookie                  # ip hash
     # alpharacks-ovz-ssd 1.5TB KVM
     server alpharacks-kvm-ssd    104.223.53.140:2020  check port 2020  inter 5000  maxconn 10450 fall 3 weight 50
     # alpharacks-ovz-hdd 2.9TB KVM
