--- a/haproxy.cfg
+++ b/haproxy.cfg
@@ -84,7 +84,7 @@ backend     ssr2018
     # profitserver 100M
     server profitserver          80.85.156.194:2018   check port 2018  inter 5000  maxconn 10450 fall 3 weight 50
     # raksmart 15M 精品网
-    server raksmart              66.98.125.508:2018   check port 2018  inter 5000  maxconn 10450 fall 3 weight 50
+    server raksmart              104.233.224.155:2018   check port 2018  inter 5000  maxconn 10450 fall 3 weight 50
     # ramnode 500G OVZ
     server ramnode               168.235.96.233:2018  check port 2018  inter 5000  maxconn 10450 fall 3 weight 50
     # tripodcloud 1.5T
@@ -152,7 +152,7 @@ backend     ssr2019
     # profitserver 100M
     server profitserver          80.85.156.194:2019   check port 2019  inter 5000  maxconn 10450 fall 3 weight 50
     # raksmart 15M 精品网
-    server raksmart              66.98.125.508:2019   check port 2019  inter 5000  maxconn 10450 fall 3 weight 50
+    server raksmart              104.233.224.155:2019   check port 2019  inter 5000  maxconn 10450 fall 3 weight 50
     # ramnode 500G OVZ
     server ramnode               168.235.96.233:2019  check port 2019  inter 5000  maxconn 10450 fall 3 weight 50
     # tripodcloud 1.5T
@@ -170,7 +170,7 @@ frontend    ssr2020
     tcp-request inspect-delay 2s
     bind                    *:22020
     default_backend         ssr2020
-backend     shadowsocksR
+backend     ssr2020
     option                  http-server-close
     balance                 rdp-cookie                  # ip hash
     # alpharacks-ovz-ssd 1.5TB KVM
@@ -220,7 +220,7 @@ backend     shadowsocksR
     # profitserver 100M
     server profitserver          80.85.156.194:2020   check port 2020  inter 5000  maxconn 10450 fall 3 weight 50
     # raksmart 15M 精品网
-    server raksmart              66.98.125.508:2020   check port 2020  inter 5000  maxconn 10450 fall 3 weight 50
+    server raksmart              104.233.224.155:2020   check port 2020  inter 5000  maxconn 10450 fall 3 weight 50
     # ramnode 500G OVZ
     server ramnode               168.235.96.233:2020  check port 2020  inter 5000  maxconn 10450 fall 3 weight 50
     # tripodcloud 1.5T
