--- a/haproxy.cfg
+++ b/haproxy.cfg
@@ -20,7 +20,7 @@ defaults
     timeout server          1m                         # 服务器端超时
     maxconn                 50240                      # 每个进程可用的最大连接数
     balance                 leastconn                  # 使用连接数最少的服务器
-listen      admin_status               # 配置监控WEB控制台
+listen      admin_status                               # 配置监控WEB控制台
     mode                    http                       # http模式
     bind                    0.0.0.0:16888              # 侦听IPort
     stats                   enable
@@ -78,13 +78,14 @@ backend     ssr2018
     # hostodo 1TB
     server hostodo               216.126.238.83:2018  check port 2018  inter 5000  maxconn 10450 fall 3 weight 50
     # justhost 100M
-    server justhost              216.126.238.83:2018  check port 2018  inter 5000  maxconn 10450 fall 3 weight 50
+    server justhost              176.32.32.34:2018  check port 2018  inter 5000  maxconn 10450 fall 3 weight 50
     # pnzhost 1TB
-    server pnzhost               104.216.111.102:2018 check port 2018  inter 5000  maxconn 10450 fall 3 weight 50
+    # server pnzhost               104.216.111.102:2018 check port 2018  inter 5000  maxconn 10450 fall 3 weight 50
+    server pnzhost               202.91.34.98:22018 check port 22018  inter 5000  maxconn 10450 fall 3 weight 50
     # profitserver 100M
     server profitserver          80.85.156.194:2018   check port 2018  inter 5000  maxconn 10450 fall 3 weight 50
     # raksmart 15M 精品网
-    server raksmart              104.233.224.155:2018   check port 2018  inter 5000  maxconn 10450 fall 3 weight 50
+    server raksmart              104.233.224.155:2018 check port 2018  inter 5000  maxconn 10450 fall 3 weight 50
     # ramnode 500G OVZ
     server ramnode               168.235.96.233:2018  check port 2018  inter 5000  maxconn 10450 fall 3 weight 50
     # tripodcloud 1.5T
@@ -146,13 +147,14 @@ backend     ssr2019
     # hostodo 1TB
     server hostodo               216.126.238.83:2019  check port 2019  inter 5000  maxconn 10450 fall 3 weight 50
     # justhost 100M
-    server justhost              216.126.238.83:2019  check port 2019  inter 5000  maxconn 10450 fall 3 weight 50
+    server justhost              176.32.32.34:2019  check port 2019  inter 5000  maxconn 10450 fall 3 weight 50
     # pnzhost 1TB
-    server pnzhost               104.216.111.102:2019 check port 2019  inter 5000  maxconn 10450 fall 3 weight 50
+    # server pnzhost               104.216.111.102:2019 check port 2019  inter 5000  maxconn 10450 fall 3 weight 50
+    server pnzhost               202.91.34.98:22019 check port 22019  inter 5000  maxconn 10450 fall 3 weight 50
     # profitserver 100M
     server profitserver          80.85.156.194:2019   check port 2019  inter 5000  maxconn 10450 fall 3 weight 50
     # raksmart 15M 精品网
-    server raksmart              104.233.224.155:2019   check port 2019  inter 5000  maxconn 10450 fall 3 weight 50
+    server raksmart              104.233.224.155:2019 check port 2019  inter 5000  maxconn 10450 fall 3 weight 50
     # ramnode 500G OVZ
     server ramnode               168.235.96.233:2019  check port 2019  inter 5000  maxconn 10450 fall 3 weight 50
     # tripodcloud 1.5T
@@ -214,13 +216,14 @@ backend     ssr2020
     # hostodo 1TB
     server hostodo               216.126.238.83:2020  check port 2020  inter 5000  maxconn 10450 fall 3 weight 50
     # justhost 100M
-    server justhost              216.126.238.83:2020  check port 2020  inter 5000  maxconn 10450 fall 3 weight 50
+    server justhost              176.32.32.34:2020  check port 2020  inter 5000  maxconn 10450 fall 3 weight 50
     # pnzhost 1TB
-    server pnzhost               104.216.111.102:2020 check port 2020  inter 5000  maxconn 10450 fall 3 weight 50
+    # server pnzhost               104.216.111.102:2020 check port 2020  inter 5000  maxconn 10450 fall 3 weight 50
+    server pnzhost               202.91.34.98:22020 check port 22020  inter 5000  maxconn 10450 fall 3 weight 50
     # profitserver 100M
     server profitserver          80.85.156.194:2020   check port 2020  inter 5000  maxconn 10450 fall 3 weight 50
     # raksmart 15M 精品网
-    server raksmart              104.233.224.155:2020   check port 2020  inter 5000  maxconn 10450 fall 3 weight 50
+    server raksmart              104.233.224.155:2020 check port 2020  inter 5000  maxconn 10450 fall 3 weight 50
     # ramnode 500G OVZ
     server ramnode               168.235.96.233:2020  check port 2020  inter 5000  maxconn 10450 fall 3 weight 50
     # tripodcloud 1.5T
