--- a/haproxy.cfg
+++ b/haproxy.cfg
@@ -3,6 +3,7 @@ global
     log         127.0.0.1 local2
     chroot      /var/lib/haproxy
     pidfile     /var/run/haproxy.pid
+    log         127.0.0.1 local2
     user        haproxy
     group       haproxy
     maxconn     50240
@@ -41,8 +42,6 @@ backend     ssr2018
     server alpharacks-kvm-ssd    104.223.53.140:2018  check port 2018  inter 5000  maxconn 10450 fall 3 weight 50
     # alpharacks-ovz-hdd 2.9TB KVM
     server alpharacks-kvm-hdd    104.223.53.113:2018  check port 2018  inter 5000  maxconn 10450 fall 3 weight 50
-    # anynode 500G
-    server anynode               206.253.164.26:2018  check port 2018  inter 5000  maxconn 10450 fall 3 weight 50
     # arebz arebz-gia-cn2 15M 不限
     server arebz-gia-cn2         107.148.243.60:2018  check port 2018  inter 5000  maxconn 10450 fall 3 weight 50
     # arebz LA 20M 不限
@@ -55,8 +54,8 @@ backend     ssr2018
     server bandwagon-cn2-dc3-2   144.34.232.37:2018   check port 2018  inter 5000  maxconn 10450 fall 3 weight 50
     # bandwagon-gia-cn2 300G
     server bandwagon-gia-cn2     67.230.189.12:2018   check port 2018  inter 5000  maxconn 10450 fall 3 weight 50
-    # bandwagon-qn1  550G
-    server bandwagon-qn1     	 45.78.20.117:2018    check port 2018  inter 5000  maxconn 10450 fall 3 weight 50
+    # bandwagon-hk-dc8  550G
+    server bandwagon-hk-dc8      95.181.190.13:2018    check port 2018  inter 5000  maxconn 10450 fall 3 weight 50
     # bandwagon-qn2 1T
     server bandwagon-qn2     	 66.98.125.108:2018   check port 2018  inter 5000  maxconn 10450 fall 3 weight 50
     # dedione-gia-cn2 5T
@@ -110,8 +109,6 @@ backend     ssr2019
     server alpharacks-kvm-ssd    104.223.53.140:2019  check port 2019  inter 5000  maxconn 10450 fall 3 weight 50
     # alpharacks-ovz-hdd 2.9TB KVM
     server alpharacks-kvm-hdd    104.223.53.113:2019  check port 2019  inter 5000  maxconn 10450 fall 3 weight 50
-    # anynode 500G
-    server anynode               206.253.164.26:2019  check port 2019  inter 5000  maxconn 10450 fall 3 weight 50
     # arebz arebz-gia-cn2 15M 不限
     server arebz-gia-cn2         107.148.243.60:2019  check port 2019  inter 5000  maxconn 10450 fall 3 weight 50
     # arebz LA 20M 不限
@@ -124,8 +121,8 @@ backend     ssr2019
     server bandwagon-cn2-dc3-2   144.34.232.37:2019   check port 2019  inter 5000  maxconn 10450 fall 3 weight 50
     # bandwagon-gia-cn2 300G
     server bandwagon-gia-cn2     67.230.189.12:2019   check port 2019  inter 5000  maxconn 10450 fall 3 weight 50
-    # bandwagon-qn1  550G
-    server bandwagon-qn1     	 45.78.20.117:2019    check port 2019  inter 5000  maxconn 10450 fall 3 weight 50
+    # bandwagon-hk-dc8  550G
+    server bandwagon-hk-dc8      95.181.190.13:2019    check port 2019  inter 5000  maxconn 10450 fall 3 weight 50
     # bandwagon-qn2 1T
     server bandwagon-qn2     	 66.98.125.108:2019   check port 2019  inter 5000  maxconn 10450 fall 3 weight 50
     # dedione-gia-cn2 5T
@@ -179,8 +176,6 @@ backend     ssr2020
     server alpharacks-kvm-ssd    104.223.53.140:2020  check port 2020  inter 5000  maxconn 10450 fall 3 weight 50
     # alpharacks-ovz-hdd 2.9TB KVM
     server alpharacks-kvm-hdd    104.223.53.113:2020  check port 2020  inter 5000  maxconn 10450 fall 3 weight 50
-    # anynode 500G
-    server anynode               206.253.164.26:2020  check port 2020  inter 5000  maxconn 10450 fall 3 weight 50
     # arebz arebz-gia-cn2 15M 不限
     server arebz-gia-cn2         107.148.243.60:2020  check port 2020  inter 5000  maxconn 10450 fall 3 weight 50
     # arebz LA 20M 不限
@@ -193,8 +188,8 @@ backend     ssr2020
     server bandwagon-cn2-dc3-2   144.34.232.37:2020   check port 2020  inter 5000  maxconn 10450 fall 3 weight 50
     # bandwagon-gia-cn2 300G
     server bandwagon-gia-cn2     67.230.189.12:2020   check port 2020  inter 5000  maxconn 10450 fall 3 weight 50
-    # bandwagon-qn1  550G
-    server bandwagon-qn1     	 45.78.20.117:2020    check port 2020  inter 5000  maxconn 10450 fall 3 weight 50
+    # bandwagon-hk-dc8  550G
+    server bandwagon-hk-dc8      95.181.190.13:2020    check port 2020  inter 5000  maxconn 10450 fall 3 weight 50
     # bandwagon-qn2 1T
     server bandwagon-qn2     	 66.98.125.108:2020   check port 2020  inter 5000  maxconn 10450 fall 3 weight 50
     # dedione-gia-cn2 5T
